[gd_scene load_steps=12 format=3 uid="uid://rm4clvf6mq8y"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_noxnx"]
[ext_resource type="Texture2D" uid="uid://bmkv1xrqskniw" path="res://icon.svg" id="2_8ybda"]
[ext_resource type="Texture2D" uid="uid://b1audjfo1jr8q" path="res://35c1b59489384e525605851b12558928.png" id="3_pxg7m"]
[ext_resource type="Script" path="res://Scenes/health_bar.gd" id="3_x800w"]
[ext_resource type="AudioStream" uid="uid://r6t6xqmc0snx" path="res://Audio/music/ROZKOL - Self-Indulgent Jazz Interlude.mp3" id="5_kos26"]

[sub_resource type="CanvasTexture" id="CanvasTexture_su1ky"]

[sub_resource type="CanvasTexture" id="CanvasTexture_8uqje"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l0bh7"]
bg_color = Color(0, 0, 0, 0.756863)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oqepi"]
bg_color = Color(0.780392, 0.0470588, 0.137255, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_x2qug"]

[sub_resource type="CanvasTexture" id="CanvasTexture_yd8bb"]

[node name="ui" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_noxnx")

[node name="end_of_game_screen" type="Node2D" parent="."]
visible = false

[node name="end_game_scoreDisplay" type="Node2D" parent="end_of_game_screen"]
position = Vector2(576, 326)
scale = Vector2(1.49227, 1.60664)

[node name="Sprite2D" type="Sprite2D" parent="end_of_game_screen/end_game_scoreDisplay"]
modulate = Color(0, 0.85098, 0, 0.905882)
position = Vector2(0.499998, -46.5)
scale = Vector2(1.17969, 0.320313)
texture = ExtResource("2_8ybda")

[node name="Label_score" type="Label" parent="end_of_game_screen/end_game_scoreDisplay"]
offset_left = -61.0
offset_top = -63.0
offset_right = 8.0
offset_bottom = -35.0
scale = Vector2(0.7, 0.7)
text = "SCORE:"

[node name="points" type="Label" parent="end_of_game_screen/end_game_scoreDisplay"]
offset_left = -19.0
offset_top = -63.0
offset_right = 84.0
offset_bottom = -35.0
scale = Vector2(0.7, 0.7)
text = "0"

[node name="Lable_time" type="Label" parent="end_of_game_screen/end_game_scoreDisplay"]
offset_left = -62.0
offset_top = -48.0
offset_right = 7.0
offset_bottom = -20.0
scale = Vector2(0.7, 0.7)
text = "TIME:"

[node name="time" type="Label" parent="end_of_game_screen/end_game_scoreDisplay"]
offset_left = -29.0
offset_top = -48.0
offset_right = 74.0
offset_bottom = -20.0
scale = Vector2(0.7, 0.7)
text = "0"

[node name="restart_button" type="Button" parent="end_of_game_screen"]
offset_left = 464.0
offset_top = 298.0
offset_right = 617.0
offset_bottom = 321.0
scale = Vector2(1.45595, 1.49366)

[node name="Label" type="Label" parent="end_of_game_screen/restart_button"]
layout_mode = 0
offset_left = 3.0
offset_top = -4.0
offset_right = 149.0
offset_bottom = 23.0
text = "Restart"
horizontal_alignment = 1

[node name="quitButton" type="Button" parent="end_of_game_screen"]
offset_left = 464.0
offset_top = 344.303
offset_right = 617.0
offset_bottom = 367.303
scale = Vector2(1.45595, 1.49366)

[node name="Label" type="Label" parent="end_of_game_screen/quitButton"]
layout_mode = 0
offset_right = 156.0
offset_bottom = 29.0
text = "Quit"
horizontal_alignment = 1

[node name="durring_game_screen" type="Node2D" parent="."]
visible = false
position = Vector2(66, 53)

[node name="Sprite2D" type="Sprite2D" parent="durring_game_screen"]
modulate = Color(0.187176, 0.187176, 0.187176, 0.34902)
position = Vector2(36.0181, -32.6697)
scale = Vector2(-208, 44.9289)
texture = SubResource("CanvasTexture_su1ky")

[node name="bars" type="Sprite2D" parent="durring_game_screen"]
modulate = Color(0.152941, 0.152941, 0.152941, 0.811765)
position = Vector2(825, -28.4375)
scale = Vector2(526, 58.875)
texture = SubResource("CanvasTexture_8uqje")

[node name="HP_bar" type="Sprite2D" parent="durring_game_screen"]
visible = false
modulate = Color(0.760565, 3.99967e-05, 0.176149, 0.811765)
position = Vector2(832, -38)
scale = Vector2(513, 16)
texture = SubResource("CanvasTexture_8uqje")

[node name="stamina_bar" type="Sprite2D" parent="durring_game_screen"]
modulate = Color(0.14619, 0.414583, 0.580878, 0.811765)
position = Vector2(860, -15)
scale = Vector2(456.75, 11)
texture = SubResource("CanvasTexture_8uqje")

[node name="crosshair" type="Sprite2D" parent="durring_game_screen"]
modulate = Color(0.0627451, 0.0627451, 0.0627451, 0.447059)
position = Vector2(510, 267)
scale = Vector2(0.0312498, 0.0312503)
texture = ExtResource("2_8ybda")

[node name="count_up_time" type="Label" parent="durring_game_screen"]
offset_left = 7.0
offset_top = -48.0
offset_right = 107.0
offset_bottom = -22.0
scale = Vector2(1.24, 1.4)

[node name="Lable2(_time__)" type="Label" parent="durring_game_screen"]
offset_left = -54.0
offset_top = -49.0
offset_right = 46.0
offset_bottom = -23.0
scale = Vector2(1.24, 1.4)
text = "Time:"

[node name="HealthBar" type="ProgressBar" parent="durring_game_screen"]
offset_left = 575.0
offset_top = -51.0
offset_right = 1088.0
offset_bottom = -28.0
theme_override_styles/background = SubResource("StyleBoxFlat_l0bh7")
theme_override_styles/fill = SubResource("StyleBoxFlat_oqepi")
value = 100.0
fill_mode = 1
script = ExtResource("3_x800w")

[node name="before_game_screen" type="Node2D" parent="."]
position = Vector2(578, 155)
scale = Vector2(4.33139, 5.2186)

[node name="PlayButton" type="Button" parent="before_game_screen"]
offset_left = -26.3195
offset_top = 16.0963
offset_right = 126.681
offset_bottom = 45.0963
scale = Vector2(0.335087, 0.271835)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="before_game_screen/PlayButton"]
layout_mode = 0
offset_right = 152.0
offset_bottom = 28.0
text = "Play"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="SettingsButton" type="Button" parent="before_game_screen"]
offset_left = -26.3195
offset_top = 26.2523
offset_right = 126.681
offset_bottom = 55.2523
scale = Vector2(0.335087, 0.271835)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="before_game_screen/SettingsButton"]
layout_mode = 0
offset_right = 152.0
offset_bottom = 25.0
text = "Settings"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="quitButton" type="Button" parent="before_game_screen"]
offset_left = -26.3195
offset_top = 36.2166
offset_right = 126.681
offset_bottom = 59.2166
scale = Vector2(0.335087, 0.271835)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="before_game_screen/quitButton"]
layout_mode = 0
offset_right = 154.0
offset_bottom = 23.0
text = "Quit"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="escape_screen" type="Node2D" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="escape_screen"]
offset_right = 1155.0
offset_bottom = 655.0
color = Color(0, 0, 0, 0.356863)

[node name="title" type="Sprite2D" parent="escape_screen"]
modulate = Color(0.0823529, 0.603922, 0.592157, 1)
position = Vector2(578, 184)
scale = Vector2(0.62954, 0.633929)
texture = ExtResource("3_pxg7m")

[node name="ResumeButton" type="Button" parent="escape_screen"]
offset_left = 464.0
offset_top = 198.0
offset_right = 617.0
offset_bottom = 229.0
scale = Vector2(1.45595, 1.41366)
text = "
"

[node name="Label" type="Label" parent="escape_screen/ResumeButton"]
layout_mode = 0
offset_left = 3.43418
offset_top = 2.82954
offset_right = 149.434
offset_bottom = 31.8295
text = "Resume"
horizontal_alignment = 1

[node name="Help" type="Button" parent="escape_screen"]
offset_left = 464.0
offset_top = 250.0
offset_right = 617.0
offset_bottom = 273.0
scale = Vector2(1.45595, 1.49366)

[node name="Label" type="Label" parent="escape_screen/Help"]
layout_mode = 0
offset_left = 2.74734
offset_right = 148.747
offset_bottom = 27.0
text = "Help"
horizontal_alignment = 1

[node name="SettingsButton" type="Button" parent="escape_screen"]
offset_left = 464.0
offset_top = 291.0
offset_right = 617.0
offset_bottom = 320.0
scale = Vector2(1.45509, 1.39184)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="escape_screen/SettingsButton"]
layout_mode = 0
offset_top = 2.15542
offset_right = 152.0
offset_bottom = 27.1554
text = "Settings"
horizontal_alignment = 1

[node name="restart_button" type="Button" parent="escape_screen"]
offset_left = 464.0
offset_top = 337.0
offset_right = 617.0
offset_bottom = 360.0
scale = Vector2(1.45595, 1.49366)

[node name="Label" type="Label" parent="escape_screen/restart_button"]
layout_mode = 0
offset_left = 2.74734
offset_top = -2.00849
offset_right = 148.747
offset_bottom = 24.9915
text = "Restart"
horizontal_alignment = 1

[node name="back_to_start" type="Button" parent="escape_screen"]
offset_left = 464.0
offset_top = 380.0
offset_right = 617.0
offset_bottom = 403.0
scale = Vector2(1.45595, 1.49366)

[node name="Label" type="Label" parent="escape_screen/back_to_start"]
layout_mode = 0
offset_right = 156.0
offset_bottom = 29.0
text = "Quit game"
horizontal_alignment = 1

[node name="settings_screen" type="Node2D" parent="."]
visible = false
position = Vector2(581, 255)
scale = Vector2(4.02525, 3.47047)

[node name="settings_background_screen" type="Sprite2D" parent="settings_screen"]
modulate = Color(0, 0, 0, 1)
position = Vector2(2.73273, 22.1872)
scale = Vector2(182.846, 136.005)
texture = SubResource("CanvasTexture_x2qug")

[node name="MarginContainer" type="MarginContainer" parent="settings_screen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -81.0
offset_top = -37.0
offset_right = 238.0
offset_bottom = 194.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="settings_screen/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="settings_screen/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="Volume" type="HSlider" parent="settings_screen/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="settings_screen/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Screen mode"

[node name="OptionButton" type="OptionButton" parent="settings_screen/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ExitMenuButton" type="Button" parent="settings_screen/MarginContainer/VBoxContainer"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="settings_screen/MarginContainer/VBoxContainer/ExitMenuButton"]
modulate = Color(0.868677, 0.10574, 2.88785e-07, 1)
position = Vector2(18.3201, 3.75)
scale = Vector2(36.4582, 8.5)
texture = SubResource("CanvasTexture_yd8bb")

[node name="Label" type="Label" parent="settings_screen/MarginContainer/VBoxContainer/ExitMenuButton"]
layout_mode = 0
offset_left = 10.0
offset_top = -1.0
offset_right = 47.0
offset_bottom = 22.0
scale = Vector2(0.562934, 0.37594)
text = "Exit"
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_kos26")
volume_db = -40.0
autoplay = true
bus = &"Music"

[connection signal="pressed" from="end_of_game_screen/restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="end_of_game_screen/quitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="before_game_screen/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="before_game_screen/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="before_game_screen/quitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="escape_screen/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="escape_screen/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="escape_screen/restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="escape_screen/back_to_start" to="." method="_on_back_to_start_pressed"]
[connection signal="value_changed" from="settings_screen/MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="pressed" from="settings_screen/MarginContainer/VBoxContainer/ExitMenuButton" to="." method="_on_exit_menu_button_pressed"]
